# pong-tutorial-public

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  train_toy_lm.py
exercises/part1_flow_matching_basics/: exercises.ipynb  solutions.ipynb  solutions.py  tests.py
exercises/part2_flow_matching_mnist/: exercises.ipynb  solutions.ipynb  solutions.py  tests.py
exercises/part3_far_pong/: exercises.ipynb  modulation_diagram.html  patchify_diagram.html  pong_data.py  solutions.ipynb  solutions.py  tests.py
exercises/part4_far_kv_cache/: exercises.ipynb  solutions.ipynb  solutions.py  tests.py
instructions/: Home.html  Home.md
instructions/pages/: 02_flow_matching_mnist.html  03_far_pong.html  04_far_kv_cache.html
